--- a/tis.config
+++ b/tis.config
@@ -1,8 +1,8 @@
 [
   {
-    "name": "Test",
+    "name": "Input length = 0",
     "prefix_path": "c/",
-    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","main.c"],
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","main.c","tis_test.c",
     "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
     "machdep": "gcc_x86_64"
   }
