--- a/tis.config
+++ b/tis.config
@@ -3,7 +3,7 @@
     "name": "Input length = 0",
     "prefix_path": "c/",
     "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","main.c","tis_test.c"],
-    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -U__clang__ -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
     "machdep": "gcc_x86_64",
     "main": "test"
   }
