--- a/tis.config
+++ b/tis.config
@@ -1,6 +1,6 @@
 [
   {
-    "name": "Without input",
+    "name": "Input length = 0 (original main fn)",
     "prefix_path": "c/",
     "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","main.c","tis_test.c"],
     "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
@@ -8,7 +8,175 @@
     "main": "test"
   },
   {
-    "name": "With input",
+    "name": "Input length = 0",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 1",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 1023",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 1024",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 1025",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 2048",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 2049",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 3072",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 3073",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 4096",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 4097",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 5120",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 5121",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 6144",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 6145",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 7168",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 7169",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 8192",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 8193",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 16184",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 31744",
+    "prefix_path": "c/",
+    "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
+    "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
+    "machdep": "gcc_x86_64",
+    "main": "test"
+  },
+  {
+    "name": "Input length = 102400",
     "prefix_path": "c/",
     "files": ["blake3.c","blake3_dispatch.c","blake3_portable.c","tis_main.c","tis_test.c"],
     "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=1023 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
