--- a/tis.config
+++ b/tis.config
@@ -55,6 +55,7 @@
     "machdep": "gcc_x86_64",
     "main": "test"
   },
+  /* Commenting the tests with relatively long input size to make the analysis duration quite short
   {
     "name": "Input length = 2049",
     "prefix_path": "c/",
@@ -182,5 +183,5 @@
     "compilation_cmd": "gcc -O3 -Wall -Wextra -std=c11 -pedantic -DTRUSTINSOFT -DINPUT_LEN=102400 -DBLAKE3_TESTING -fsanitize=address -fsanitize=undefined -DBLAKE3_TESTING -DBLAKE3_NO_SSE41 -DBLAKE3_NO_AVX2 -DBLAKE3_NO_AVX512 blake3.c blake3_dispatch.c blake3_portable.c main.c -o blake3",
     "machdep": "gcc_x86_64",
     "main": "test"
-  }
+  }*/
 ]
